--- a/SmashDEVA.cbp
+++ b/SmashDEVA.cbp
@@ -55,6 +55,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="narrow.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="narrow.h" />
 		<Unit filename="obstacles.c">
 			<Option compilerVar="CC" />
 		</Unit>
