--- a/SmashDEVA.cbp
+++ b/SmashDEVA.cbp
@@ -30,7 +30,7 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="C:/Program Files (x86)/CodeBlocks/SDL-1.2.15/include" />
+			<Add directory="F:/Logiciels/CodeBlocks/SDL-1.2.15/include" />
 		</Compiler>
 		<Linker>
 			<Add library="mingw32" />
@@ -40,7 +40,10 @@
 			<Add library="gdi32" />
 			<Add library="winmm" />
 			<Add library="dxguid" />
-			<Add directory="C:/Program Files (x86)/CodeBlocks/SDL-1.2.15/lib" />
+			<Add library="F:/Logiciels/CodeBlocks/SDL-1.2.15/lib/SDL_image.lib" />
+			<Add library="F:/Logiciels/CodeBlocks/SDL-1.2.15/lib/SDL_mixer.lib" />
+			<Add library="F:/Logiciels/CodeBlocks/SDL-1.2.15/lib/SDL_ttf.lib" />
+			<Add directory="F:/Logiciels/CodeBlocks/SDL-1.2.15/lib" />
 		</Linker>
 		<Unit filename="cb.bmp" />
 		<Unit filename="constantes.h" />
@@ -55,6 +58,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="menu.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="menu.h" />
 		<Unit filename="narrow.c">
 			<Option compilerVar="CC" />
 		</Unit>
