Choix du bot (0.4.3)
- On peux choisir la difficulté du bot dans la selection du perso

--- a/SmashDEVA.cbp
+++ b/SmashDEVA.cbp
@@ -25,6 +25,8 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="C:/Users/Aymeric/Documents/GitHub/SmashDEVA/SDL_ttf.lib" />
+					<Add library="C:/Program Files (x86)/CodeBlocks/SDL-1.2.15/bin/SDL_image.lib" />
 				</Linker>
 			</Target>
 		</Build>
